--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="features.html">Key Features</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Galaxy Z-Flip</a></li>
                    
           <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -102,25 +102,7 @@
   </div>
 </section>
 
-  <!-- <section class="container my-5 bg-primary text-light">
-    <h2 class="text-center">Top Features</h2>
-    <div class="row text-center mt-4">
-      <div class="col-md-4">
-        <h5>Powerful Battery</h5>
-        <p>Up to 48 hours of usage time with fast charging.</p>
-      </div>
-      <div class="col-md-4">
-        <h5>High-End Camera</h5>
-        <p>Capture every moment in 4K ultra HD.</p>
-      </div>
-      <div class="col-md-4">
-        <h5>Accessory Compatible</h5>
-        <p>Connect seamlessly with SmartGadgets accessories.</p>
-      </div>
-    </div>
-  </section> -->
-
-    <!-- Contact Section -->
+<!-- Contact Section -->
   <section class="py-5 bg-white">
   <div class="container">
     <h2 class="text-center mb-4 fw-bold">Contact Us</h2>
