added Logo to sign up page

--- a/features.html
+++ b/features.html
@@ -7,12 +7,15 @@
 
 <body class="bg-success-subtle">
 
-  <!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">SmartGadgets</a>
-    <div class="collapse navbar-collapse">
-              <ul class="navbar-nav ms-auto">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">SmartGadgets</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-controls="e" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="features.html">Key Features</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">Galaxy Z-Flip</a></li>
@@ -29,9 +32,9 @@
           </ul>
         </li>
         </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 <div class="container py-5">
   <div class="p-3 mb-2 bg-primary text-white text-center mb-4"> <h2>Call to Order 08012345678910
