--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,13 @@
   
   <!-- Sign up Section -->
 <div class="container py-5">
+
+    <div class="d-flex justify-content-center mb-4">
+    <img src="./Images/samsung logo.avif" 
+         alt="Samsung Galaxy Z-FLIP" 
+         class="img-fluid rounded-circle" 
+         style="width: 220px; height: 120px; object-fit: cover;">
+  </div>
   <h2 class="text-center">Get Product Updates</h2>
   <form>
     <div class="mb-3">
