--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">SmartGadgets</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-controls="e" aria-expanded="false" aria-label="Toggle navigation">
