--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@
 <body class="bg-success-subtle">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">SmartGadgets</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-controls="e" aria-expanded="false" aria-label="Toggle navigation">
