--- a/about.html
+++ b/about.html
@@ -80,6 +80,8 @@
     </form>
   </section>
 
+
+  <!-- Footer Section -->
   <footer class="bg-dark text-light py-4 mt-5">
   <div class="container text-center">
    
