--- a/features.html
+++ b/features.html
@@ -36,14 +36,15 @@
     </div>
   </nav>
 
+  <!-- Contents -->
+
 <div class="container py-5">
   <div class="p-3 mb-2 bg-primary text-white text-center mb-4"> <h2>Call to Order 08012345678910
   </h2>
   </div>
 </div>
 
-
-<!-- Contents -->
+<!-- 2nd Content -->
 <div class="container py-5">
   <h2 class="text-center mb-4">Key Features</h2>
   <div class="row">
